@@ -1,0 +1,8 @@
+
+The <tt>testmips</tt> machine is a generic test machine with a
+<a href="../components/component_mips_cpu.html">MIPS CPU</a>.
+
+
+<hr>
+</body>
+</html>
